# wheatley

./: .gitignore  README.md
controllers/controllers/: package.xml
controllers/executor/: CMakeLists.txt  package.xml
controllers/executor/config/: settings.yaml
controllers/executor/launch/: executor.launch
controllers/executor/src/: executor_node.cpp
controllers/hand_follow_controller/: CMakeLists.txt  package.xml
controllers/hand_follow_controller/src/: hand_follow_controller_node.cpp
controllers/map_collision/: CMakeLists.txt  package.xml
controllers/map_collision/src/: map_collision_node.cpp
controllers/motor_controller/: CMakeLists.txt  package.xml
controllers/motor_controller/config/: settings.yaml
controllers/motor_controller/launch/: motor_controller.launch
controllers/motor_controller/src/: average_topic.cpp  motor_controller_node.cpp
controllers/wall_brain/: CMakeLists.txt  package.xml
controllers/wall_brain/src/: wall_brain_node.cpp
controllers/wall_following/: CMakeLists.txt  package.xml
controllers/wall_following/config/: settings.yaml
controllers/wall_following/launch/: wall_avoider.launch  wall_following.launch  wall_following_node.launch
controllers/wall_following/src/: wall_avoider_node.cpp  wall_brain_node.cpp
controllers/wall_following_controller/: CMakeLists.txt  package.xml
controllers/wall_following_controller/launch/: wall_avoider.launch
controllers/wall_following_controller/src/: wall_following_controller_node.cpp
controllers/xbox/: CMakeLists.txt  package.xml
controllers/xbox/config/: settings.yaml
controllers/xbox/launch/: joy.launch  xbox.launch
controllers/xbox/src/: xbox_node.cpp
main/: CMakeLists.txt  package.xml
main/config/: measurements.yaml
main/launch/: arduino.launch  base.launch  competition.launch  ekf_base.launch  playback.launch  primesense.launch  robot_model.launch  test_run.launch  tf_robot_to_camera.launch  tf_world_to_map.launch  world_to_map_tf_broadcaster.launch
main/urdf/: wheatley_model.urdf
mapping/: CMakeLists.txt  package.xml
mapping/config/: settings.yaml
mapping/launch/: explore_mapping.launch  fetch_mapping.launch  mapping.launch  serve.launch
mapping/src/: grid_merge_node.cpp  mapping_node.cpp  object_mapping_node.cpp
navigation/: CMakeLists.txt  package.xml
navigation/config/: navigator.yaml  path_follower.yaml  settings.yaml
navigation/launch/: navigation_node.launch  navigator.launch
navigation/src/: navigation_node.cpp  navigation_queue_node.cpp  path_following_node.cpp
occupancy_grid_utils/: CMakeLists.txt  package.xml
occupancy_grid_utils/include/occupancy_grid_utils/: ray_tracer.h  shortest_path.h
occupancy_grid_utils/msg/: LocalizedCloud.msg
occupancy_grid_utils/src/: grid_overlay.cpp  shortest_path.cpp
occupancy_grid_utils/src/examples/: grid_construction_node.cpp
sensors/: CMakeLists.txt  package.xml
sensors/config/: ekf_settings.yaml  settings.yaml
sensors/launch/: distance.launch  ekf.launch  ekf_debug.launch  ir.launch  ir_distances.launch  ir_points.launch  mapper.launch  pose.launch
sensors/msg/: Distance.msg  SensorClouds.msg
sensors/src/: distance_sensors.cpp  ekf_node.cpp  ir_distances_node.cpp  ir_points_node.cpp  mapper.cpp  pose_node.cpp
vision/: README.md
vision/image_publisher/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  package.xml
vision/image_publisher/catkin_generated/: package.cmake  pkg.develspace.context.pc.py  pkg.installspace.context.pc.py
vision/image_publisher/catkin_generated/installspace/: image_publisher.pc  image_publisherConfig.cmake
vision/image_publisher/src/: image_publisher_node.cpp
vision/object_detection/: CMakeLists.txt  package.xml
vision/object_detection/src/: cloud_preprocessing_node.cpp  object_camera_transform_node.cpp  object_detection_node.cpp
vision/object_recognizer/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  package.xml
vision/object_recognizer/catkin_generated/: package.cmake  pkg.develspace.context.pc.py  pkg.installspace.context.pc.py
vision/object_recognizer/catkin_generated/installspace/: object_recognizer.pc  object_recognizerConfig.cmake
vision/object_recognizer/launch/: object_recognizer.launch  test_run.launch
vision/object_recognizer/src/: color_detector_node.cpp  image_detector_node.cpp  image_object_detector_node.cpp  object_collector_node.cpp  object_color_trainer.cpp  object_recognizer_node.cpp
vision/vision/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  package.xml
vision/vision/catkin_generated/: package.cmake  pkg.develspace.context.pc.py  pkg.installspace.context.pc.py
vision/vision/catkin_generated/installspace/: vision.pc  visionConfig.cmake
vision/vision_msgs/: CMakeLists.txt  package.xml
vision/vision_msgs/msg/: Object.msg  PreprocessedClouds.msg
wheatley/: CMakeLists.txt  package.xml
wheatley_common/: CMakeLists.txt  package.xml
wheatley_common/include/wheatley_common/: angles.h  common.h
