<?xml version="1.0"?>
<package>
	<name>vision_msgs</name>
	<version>0.0.0</version>
	<description>The vision_msgs package</description>

	<maintainer email="ras@todo.todo">ras</maintainer>
	<license>TODO</license>


	<buildtool_depend>catkin</buildtool_depend>

	<build_depend>message_generation</build_depend>
	<build_depend>std_msgs</build_depend>
        <build_depend>sensor_msgs</build_depend>
	<run_depend>message_runtime</run_depend>

</package>
